@@ -1,6 +1,7 @@
 Changelog for mk-table-checksum and mk-checksum-filter:
 
    * --engines did not work (issue 891).
+   * Index names with commas caused a crash (issue 388).
 
 2010-01-06: version 1.2.11
 
